fix modal text align

--- a/app/assets/stylesheets/_common/order-item.scss
+++ b/app/assets/stylesheets/_common/order-item.scss
@@ -102,6 +102,10 @@
 
   .item td {
     text-align: center;
+
+    .modal {
+      text-align: left;
+    }
   }
 
   .head {
